Make the showcase a little better
Now the images are slanted inward, as well as being hosted on the site
itself (some places block Discord for whatever reason).

Signed-off-by: Jadon Fowler <jadonflower@gmail.com>

--- a/index.html
+++ b/index.html
@@ -26,18 +26,34 @@
             </table>
             
             <h2>Showcase</h2>
-            <p>These are some cool mods made with the suite.</p>
             <table>
-                <tr><td><img src="https://camo.githubusercontent.com/43b07b7c91032fda745087504fae813705ec37cc/68747470733a2f2f63646e2e646973636f72646170702e636f6d2f6174746163686d656e74732f3237323630333635333338393534393537382f3337313733333638333138343436373937312f353965393264343334306364632e706e67"></td></tr>
-                <tr><td><img src="https://camo.githubusercontent.com/76541dec855e2525e28c7454ecd17536e5574b2a/68747470733a2f2f63646e2e646973636f72646170702e636f6d2f6174746163686d656e74732f3237323630333635333338393534393537382f3337313733393335373633373234363938362f323031372d31302d32322d3132313833375f3139323078313038305f7363726f742e706e67"></td></tr>
-                <tr><td><img src="https://camo.githubusercontent.com/19dd925203b4e70e5478d92c93adbf785d95a1cc/68747470733a2f2f63646e2e646973636f72646170702e636f6d2f6174746163686d656e74732f3237313130323339303535343332393038382f3237323632313137393431303434383338342f4841434b45442e676966"></td></tr>
-                <tr><td><img src="https://cdn.discordapp.com/attachments/272603653389549578/363758005126168577/RoamingDarkness.gif"></td></tr>
-                <tr><td><img src="https://cdn.discordapp.com/attachments/272603653389549578/355195800906760212/scourgebattle.gif"></td></tr>
-                <tr><td><img src="https://cdn.discordapp.com/attachments/272603653389549578/354641842987466752/Super_Knuckles_over_tails_mod.png"></td></tr>
-                <tr><td><img src="https://cdn.discordapp.com/attachments/272603653389549578/352111721306914816/unknown.png"></td></tr>
-                <tr><td><img src="https://cdn.discordapp.com/attachments/272603653389549578/289794977154990090/realsuper2.gif"></td></tr>
-                <tr><td><img src="https://cdn.discordapp.com/attachments/272603653389549578/351088833493991426/2017-08-26-124105_1920x1080_scrot.png"></td></tr>
-                <tr><td><img src="https://cdn.discordapp.com/attachments/272603653389549578/288838675561840640/420blazeit.gif"></td></tr>
+                <tr>
+                    <td class="tiltI" width="50%"><div class="showcase" style="background-image:url('img/super_sonic.png')"><p>Super Sonic</p></div></td>
+                    <td class="tiltO showcase"><p>
+                        <!--These are some dope mods by people like
+                        <span style="color:aqua">Lavander</span>,
+                        <span style="color:aqua">XPECTRYX</span>, and
+                        <span style="color:aqua">Glimmericious</span>.
+                        Credit for the sprites goes to their original authors. -->
+                        These are some cool mods made with the suite.
+                    </p></td>
+                </tr>
+                <tr>
+                    <td class="tiltI"><div class="showcase" style="background-image:url('img/goku_lopunny.png')"><p>Goku & Lopunny</p></div></td>
+                    <td class="tiltO"><div class="showcase" style="background-image:url('img/blaze.gif')"><p>Blaze</p></div></td>
+                </tr>
+                <tr>
+                    <td class="tiltI"><div class="showcase" style="background-image:url('img/evil_sonic.gif')"><p>Evil Sonic</p></div></td>
+                    <td class="tiltO"><div class="showcase" style="background-image:url('img/super_sonic2.gif')"><p>Super Sonic</p></div></td>
+                </tr>
+                <tr>
+                    <td class="tiltI"><div class="showcase" style="background-image:url('img/dark_sonic.gif')"><p>Dark Sonic</p></div></td>
+                    <td class="tiltO"><div class="showcase" style="background-image:url('img/super_knuckles.png')"><p>Super Knuckles</p></div></td>
+                </tr>
+                <tr>
+                    <td class="tiltI"><div class="showcase" style="background-image:url('img/scourge.gif')"><p>Scourge</p></div></td>
+                    <td class="tiltO"><div class="showcase" style="background-image:url('img/pacman.png')"><p>PACMAN</p></div></td>
+                </tr>
             </table>
             
             <footer>
