Change around some colors and fonts
Signed-off-by: Jadon Fowler <jadonflower@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Sonic Battle Hack Suite</title>
+        <link rel="shortcut icon" href="img/icon.png" type="image/png">
         <link rel="stylesheet" href="css/index.css"/>
         <script src="js/index.js"></script>
     </head>
@@ -16,12 +17,12 @@
             <h2>Downloads</h2>
             <table id="downloads">
                 <tr>
-                    <th width="50%">Latest Release</th>
-                    <th width="50%">Nightly Build</th>
+                    <th width="50%"><h3>Latest Release</h3></th>
+                    <th width="50%"><h3>Nightly Build</h3></th>
                 </tr>
                 <tr>
-                    <td><a href="https://github.com/phase/sbhs/releases/download/v1.3/sbhs-1-3.jar">Version 1.3</a></td>
-                    <td><a href="https://github.com/phase/sbhs/blob/builds/sbhs.jar?raw=true" id="nightly">Latest</a></td>
+                    <td><h2><a href="https://github.com/phase/sbhs/releases/download/v1.3/sbhs-1-3.jar">Version 1.3</a></h2></td>
+                    <td><h2><a href="https://github.com/phase/sbhs/blob/builds/sbhs.jar?raw=true" id="nightly">Latest</a></h2></td>
                 </tr>
             </table>
             
@@ -55,7 +56,7 @@
                     <td class="tiltO"><div class="showcase" style="background-image:url('img/pacman.png')"><p>PACMAN</p></div></td>
                 </tr>
             </table>
-            
+            <br/>
             <footer>
                 <p>
                     <small>
