--- a/index.html
+++ b/index.html
@@ -27,17 +27,11 @@
             </table>
             
             <h2>Showcase</h2>
+            <p>These are some cool mods made with the suite.</p>
             <table>
                 <tr>
                     <td class="tiltI" width="50%"><div class="showcase" style="background-image:url('img/super_sonic.png')"><p>Super Sonic</p></div></td>
-                    <td class="tiltO showcase"><p>
-                        <!--These are some dope mods by people like
-                        <span style="color:aqua">Lavander</span>,
-                        <span style="color:aqua">XPECTRYX</span>, and
-                        <span style="color:aqua">Glimmericious</span>.
-                        Credit for the sprites goes to their original authors. -->
-                        These are some cool mods made with the suite.
-                    </p></td>
+                    <td class="tiltO showcase"><div class="showcase" style="background-image:url('img/gemerl.gif')"><p>Gemerl</p></div></td>
                 </tr>
                 <tr>
                     <td class="tiltI"><div class="showcase" style="background-image:url('img/goku_lopunny.png')"><p>Goku & Lopunny</p></div></td>
