Add some more images that look hella cool
Signed-off-by: Jadon Fowler <jadonflower@gmail.com>

--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
                     <td class="tiltO showcase"><div class="showcase" style="background-image:url('img/gemerl.gif')"><p>Gemerl</p></div></td>
                 </tr>
                 <tr>
+                    <td class="tiltI"><div class="showcase" style="background-image:url('img/sonic2xl.png')"><p>Sonic2XL</p></div></td>
+                    <td class="tiltO"><div class="showcase" style="background-image:url('img/e101betamk2.png')"><p>E-101 Beta Mk II</p></div></td>
+                </tr>
+                <tr>
+                    <td class="tiltI"><div class="showcase" style="background-image:url('img/old_sonic.png')"><p>Something The One Musaab found</p></div></td>
+                    <td class="tiltO"><div class="showcase" style="background-image:url('img/fading_sonic.gif')"><p>Brandonator275's Sonic</p></div></td>
+                </tr>
+                <tr>
+                    <td class="tiltI"><div class="showcase" style="background-image:url('img/gemerl_healing.gif')"><p>Gemerl</p></div></td>
+                    <td class="tiltO"><div class="showcase" style="background-image:url('img/hyper_sonic.png')"><p>Hyper Sonic & Megaman</p></div></td>
+                </tr>
+                <tr>
                     <td class="tiltI"><div class="showcase" style="background-image:url('img/goku_lopunny.png')"><p>Goku & Lopunny</p></div></td>
                     <td class="tiltO"><div class="showcase" style="background-image:url('img/blaze.gif')"><p>Blaze</p></div></td>
                 </tr>
