Change the images of SonicXL & E101 Mk2 to Gifs
They look a lot better.

Signed-off-by: Jadon Fowler <jadonflower@gmail.com>

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     <td class="tiltO showcase"><div class="showcase" style="background-image:url('img/gemerl.gif')"><p>Gemerl</p></div></td>
                 </tr>
                 <tr>
-                    <td class="tiltI"><div class="showcase" style="background-image:url('img/sonic2xl.png')"><p>Sonic2XL</p></div></td>
-                    <td class="tiltO"><div class="showcase" style="background-image:url('img/e101betamk2.png')"><p>E-101 Beta Mk II</p></div></td>
+                    <td class="tiltI"><div class="showcase" style="background-image:url('img/sonicxl.gif')"><p>Sonic2XL</p></div></td>
+                    <td class="tiltO"><div class="showcase" style="background-image:url('img/e101betamk2_2.gif')"><p>E-101 Mk II</p></div></td>
                 </tr>
                 <tr>
                     <td class="tiltI"><div class="showcase" style="background-image:url('img/old_sonic.png')"><p>Something The One Musaab found</p></div></td>
