Add link to GitHub on front page
Signed-off-by: Jadon Fowler <jadonflower@gmail.com>

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
             
             <p>We have a <a href="https://discord.gg/JPE3FBM">Discord</a> server where nerds disect the ROM and work on hacking
                 our favorite Sonic fighting game.</p>
-            
+
+            <p>The source code for SBHS can be found on <a href="https://github.com/phase/sbhs">GitHub</a>. Contributions are
+                always welcome!</p>
+
             <h2>Downloads</h2>
             <table id="downloads">
                 <tr>
